chapel-lang.org/docs/1.28/_sources/modules/standard/Sys.rst.txt
.. default-domain:: chpl

.. module:: Sys
   :synopsis: Support for low-level programming and system calls.

Sys
===
**Usage**

.. code-block:: chapel

   use Sys;


or

.. code-block:: chapel

   import Sys;


Support for low-level programming and system calls.

This module is for low-level programming. It provides Chapel versions of
many POSIX/Linux C library or system calls. For documentation on these
system calls and constants, please see your system's manual pages.

Each of the functions in this file provides the same functionality
as the corresponding function without the ``sys_`` prefix, except that
the ``sys_`` versions all return an error code (of type :type:`~CTypes.c_int`)
and return any other values (such as how much was read) through an out
argument.

For example, you can find more about the ``mmap`` call with:

.. code-block:: sh

  man mmap

The call available here, :proc:`sys_mmap`, always returns an error
code (or 0 for no error). The pointer value normally returned by ``mmap``
will be returned through the final ``ret_out`` argument.



.. warning::

   The 'Sys' module has been deprecated; please find replacement symbols in the 'OS' and  'Socket' modules

.. data:: const F_GETFL: c_int

.. data:: const F_SETFL: c_int

.. data:: const F_GETFD: c_int

.. data:: const F_SETFD: c_int

.. data:: const SIGABRT: c_int

   .. warning::

      'Sys.SIGABRT' is deprecated; please use 'OS.POSIX.SIGABRT' instead

.. data:: const SIGALRM: c_int

   .. warning::

      'Sys.SIGALRM' is deprecated; please use 'OS.POSIX.SIGALRM' instead

.. data:: const SIGBUS: c_int

   .. warning::

      'Sys.SIGBUS' is deprecated; please use 'OS.POSIX.SIGBUS' instead

.. data:: const SIGCHLD: c_int

   .. warning::

      'Sys.SIGCHLD' is deprecated; please use 'OS.POSIX.SIGCHLD' instead

.. data:: const SIGCONT: c_int

   .. warning::

      'Sys.SIGCONT' is deprecated; please use 'OS.POSIX.SIGCONT' instead

.. data:: const SIGFPE: c_int

   .. warning::

      'Sys.SIGFPE' is deprecated; please use 'OS.POSIX.SIGFPE' instead

.. data:: const SIGHUP: c_int

   .. warning::

      'Sys.SIGHUP' is deprecated; please use 'OS.POSIX.SIGHUP' instead

.. data:: const SIGILL: c_int

   .. warning::

      'Sys.SIGILL' is deprecated; please use 'OS.POSIX.SIGILL' instead

.. data:: const SIGINT: c_int

   .. warning::

      'Sys.SIGINT' is deprecated; please use 'OS.POSIX.SIGINT' instead

.. data:: const SIGKILL: c_int

   .. warning::

      'Sys.SIGKILL' is deprecated; please use 'OS.POSIX.SIGKILL' instead

.. data:: const SIGPIPE: c_int

   .. warning::

      'Sys.SIGPIPE' is deprecated; please use 'OS.POSIX.SIGPIPE' instead

.. data:: const SIGQUIT: c_int

   .. warning::

      'Sys.SIGQUIT' is deprecated; please use 'OS.POSIX.SIGQUIT' instead

.. data:: const SIGSEGV: c_int

   .. warning::

      'Sys.SIGSEGV' is deprecated; please use 'OS.POSIX.SIGSEGV' instead

.. data:: const SIGSTOP: c_int

   .. warning::

      'Sys.SIGSTOP' is deprecated; please use 'OS.POSIX.SIGSTOP' instead

.. data:: const SIGTERM: c_int

   .. warning::

      'Sys.SIGTERM' is deprecated; please use 'OS.POSIX.SIGTERM' instead

.. data:: const SIGTRAP: c_int

   .. warning::

      'Sys.SIGTRAP' is deprecated; please use 'OS.POSIX.SIGTRAP' instead

.. data:: const SIGTSTP: c_int

   .. warning::

      'Sys.SIGTSTP' is deprecated; please use 'OS.POSIX.SIGTSTP' instead

.. data:: const SIGTTIN: c_int

   .. warning::

      'Sys.SIGTTIN' is deprecated; please use 'OS.POSIX.SIGTTIN' instead

.. data:: const SIGTTOU: c_int

   .. warning::

      'Sys.SIGTTOU' is deprecated; please use 'OS.POSIX.SIGTTOU' instead

.. data:: const SIGURG: c_int

   .. warning::

      'Sys.SIGURG' is deprecated; please use 'OS.POSIX.SIGURG' instead

.. data:: const SIGUSR1: c_int

   .. warning::

      'Sys.SIGUSR1' is deprecated; please use 'OS.POSIX.SIGUSR1' instead

.. data:: const SIGUSR2: c_int

   .. warning::

      'Sys.SIGUSR2' is deprecated; please use 'OS.POSIX.SIGUSR2' instead

.. data:: const SIGXCPU: c_int

   .. warning::

      'Sys.SIGXCPU' is deprecated; please use 'OS.POSIX.SIGXCPU' instead

.. data:: const SIGXFSZ: c_int

   .. warning::

      'Sys.SIGXFSZ' is deprecated; please use 'OS.POSIX.SIGXFSZ' instead

.. data:: const AF_UNIX: c_int

.. data:: const AF_LOCAL: c_int

.. data:: const AF_IPX: c_int

.. data:: const AF_NETLINK: c_int

.. data:: const AF_X25: c_int

.. data:: const AF_AX25: c_int

.. data:: const AF_ATMPVC: c_int

.. data:: const AF_APPLETALK: c_int

.. data:: const AF_PACKET: c_int

.. data:: const AF_INET: c_int

   .. warning::

      'Sys.AF_INET' is deprecated; please use 'Socket.AF_INET' instead

.. data:: const AF_INET6: c_int

   .. warning::

      'Sys.AF_INET6' is deprecated; please use 'Socket.AF_INET6' instead

.. data:: const SOCK_STREAM: c_int

.. data:: const SOCK_DGRAM: c_int

.. data:: const SOCK_SEQPACKET: c_int

.. data:: const SOCK_RAW: c_int

.. data:: const SOCK_RDM: c_int

.. data:: const SOCK_NONBLOCK: c_int

.. data:: const SOCK_CLOEXEC: c_int

.. data:: const MSG_CONFIRM: c_int

.. data:: const MSG_DONTROUTE: c_int

.. data:: const MSG_DONTWAIT: c_int

.. data:: const MSG_EOR: c_int

.. data:: const MSG_MORE: c_int

.. data:: const MSG_NOSIGNAL: c_int

.. data:: const MSG_OOB: c_int

.. data:: const MSG_CMSG_CLOEXEC: c_int

.. data:: const MSG_ERRQUEUE: c_int

.. data:: const MSG_PEEK: c_int

.. data:: const MSG_TRUNC: c_int

.. data:: const MSG_WAITALL: c_int

.. data:: const MSG_CTRUNC: c_int

.. data:: const SHUT_RD: c_int

.. data:: const SHUT_WR: c_int

.. data:: const SHUT_RDWR: c_int

.. data:: const SOL_SOCKET: c_int

.. data:: const IPPROTO_IP: c_int

.. data:: const IPPROTO_IPV6: c_int

.. data:: const IPPROTO_TCP: c_int

.. data:: const IPPROTO_UDP: c_int

.. data:: const SO_ACCEPTCONN: c_int

   .. warning::

      'Sys.SO_ACCEPTCONN' is deprecated; please use 'Socket.SO_ACCEPTCONN' instead

.. data:: const SO_BROADCAST: c_int

   .. warning::

      'Sys.SO_BROADCAST' is deprecated; please use 'Socket.SO_BROADCAST' instead

.. data:: const SO_DEBUG: c_int

   .. warning::

      'Sys.SO_DEBUG' is deprecated; please use 'Socket.SO_DEBUG' instead

.. data:: const SO_ERROR: c_int

   .. warning::

      'Sys.SO_ERROR' is deprecated; please use 'Socket.SO_ERROR' instead

.. data:: const SO_KEEPALIVE: c_int

   .. warning::

      'Sys.SO_KEEPALIVE' is deprecated; please use 'Socket.SO_KEEPALIVE' instead

.. data:: const SO_LINGER: c_int

   .. warning::

      'Sys.SO_LINGER' is deprecated; please use 'Socket.SO_LINGER' instead

.. data:: const SO_OOBINLINE: c_int

   .. warning::

      'Sys.SO_OOBINLINE' is deprecated; please use 'Socket.SO_OOBINLINE' instead

.. data:: const SO_RCVBUF: c_int

   .. warning::

      'Sys.SO_RCVBUF' is deprecated; please use 'Socket.SO_RCVBUF' instead

.. data:: const SO_RCVTIMEO: c_int

   .. warning::

      'Sys.SO_RCVTIMEO' is deprecated; please use 'Socket.SO_RCVTIMEO' instead

.. data:: const SO_REUSEADDR: c_int

   .. warning::

      'Sys.SO_REUSEADDR' is deprecated; please use 'Socket.SO_REUSEADDR' instead

.. data:: const SO_SNDBUF: c_int

   .. warning::

      'Sys.SO_SNDBUF' is deprecated; please use 'Socket.SO_SNDBUF' instead

.. data:: const SO_SNDTIMEO: c_int

   .. warning::

      'Sys.SO_SNDTIMEO' is deprecated; please use 'Socket.SO_SNDTIMEO' instead

.. data:: const SO_SECINFO: c_int

   .. warning::

      'Sys.SO_SECINFO' is deprecated; please use 'Socket.SO_SECINFO' instead

.. data:: const IP_ADD_MEMBERSHIP: c_int

.. data:: const IP_DROP_MEMBERSHIP: c_int

.. data:: const IP_HDRINCL: c_int

.. data:: const IP_MTU: c_int

.. data:: const IP_MTU_DISCOVER: c_int

.. data:: const IP_MULTICAST_IF: c_int

.. data:: const IP_MULTICAST_LOOP: c_int

.. data:: const IP_MULTICAST_TTL: c_int

.. data:: const IP_OPTIONS: c_int

.. data:: const IP_PKTINFO: c_int

.. data:: const IP_RECVERR: c_int

.. data:: const IP_RECVOPTS: c_int

.. data:: const IP_RECVTOS: c_int

.. data:: const IP_RECVTTL: c_int

.. data:: const IP_RETOPTS: c_int

.. data:: const IP_ROUTER_ALERT: c_int

.. data:: const IP_TOS: c_int

.. data:: const IP_TTL: c_int

.. data:: const IPV6_ADDRFORM: c_int

.. data:: const IPV6_ADD_MEMBERSHIP: c_int

.. data:: const IPV6_DROP_MEMBERSHIP: c_int

.. data:: const IPV6_MTU: c_int

.. data:: const IPV6_MTU_DISCOVER: c_int

.. data:: const IPV6_MULTICAST_HOPS: c_int

.. data:: const IPV6_MULTICAST_IF: c_int

.. data:: const IPV6_MULTICAST_LOOP: c_int

.. data:: const IPV6_PKTINFO: c_int

.. data:: const IPV6_RTHDR: c_int

.. data:: const IPV6_AUTHHDR: c_int

.. data:: const IPV6_DSTOPTS: c_int

.. data:: const IPV6_HOPOPTS: c_int

.. data:: const IPV6_HOPLIMIT: c_int

.. data:: const IPV6_RECVERR: c_int

.. data:: const IPV6_ROUTER_ALERT: c_int

.. data:: const IPV6_UNICAST_HOPS: c_int

.. data:: const IPV6_V6ONLY: c_int

.. data:: const TCP_CORK: c_int

.. data:: const TCP_DEFER_ACCEPT: c_int

.. data:: const TCP_INFO: c_int

.. data:: const TCP_KEEPCNT: c_int

.. data:: const TCP_KEEPIDLE: c_int

.. data:: const TCP_KEEPINTVL: c_int

.. data:: const TCP_LINGER2: c_int

.. data:: const TCP_MAXSEG: c_int

.. data:: const TCP_NODELAY: c_int

.. data:: const TCP_QUICKACK: c_int

.. data:: const TCP_SYNCNT: c_int

.. data:: const TCP_WINDOW_CLAMP: c_int

.. data:: const INET_ADDRSTRLEN: c_int

.. data:: const INET6_ADDRSTRLEN: c_int

.. data:: const NI_MAXHOST: c_int

.. data:: const NI_MAXSERV: c_int

.. data:: const INADDR_ANY: sys_in_addr_t

   .. warning::

      'Sys.INADDR_ANY' is deprecated; please use 'Socket.INADDR_ANY' instead

.. data:: const INADDR_BROADCAST: sys_in_addr_t

   .. warning::

      'Sys.INADDR_BROADCAST' is deprecated; please use 'Socket.INADDR_BROADCAST' instead

.. data:: const INADDR_LOOPBACK: sys_in_addr_t

   .. warning::

      'Sys.INADDR_LOOPBACK' is deprecated; please use 'Socket.INADDR_LOOPBACK' instead

.. data:: const in6addr_any: sys_in6_addr_t

   .. warning::

      'Sys.in6addr_any' is deprecated; please use 'Socket.in6addr_any' instead

.. data:: const in6addr_loopback: sys_in6_addr_t

   .. warning::

      'Sys.in6addr_loopback' is deprecated; please use 'Socket.in6addr_loopback' instead

.. type:: type sys_in_addr_t

   .. warning::

      'Sys.sys_in_addr_t' is deprecated; please use 'Socket.sys_in_addr_t' instead

.. type:: type sys_in6_addr_t

   .. warning::

      'Sys.sys_in6_addr_t' is deprecated; please use 'Socket.sys_in6_addr_t' instead

.. type:: type sys_sockaddr_storage_t

.. type:: type socklen_t = int(32)

   The type corresponding to C's socklen_t 

.. record:: sys_sockaddr_t

   .. attribute:: var addr: sys_sockaddr_storage_t

   .. attribute:: var len: socklen_t

   .. method:: proc init()

.. method:: proc sys_sockaddr_t.family: c_int

   
   Returns socket family.
   
   :returns: a socket family
   :rtype: `c_int`
   

.. record:: sys_addrinfo_t

   .. attribute:: var ai_flags: c_int

   .. attribute:: var ai_family: c_int

   .. attribute:: var ai_socktype: c_int

   .. attribute:: var ai_protocol: c_int

   .. attribute:: var ai_addrlen: socklen_t

   .. attribute:: var ai_next: c_ptr(sys_addrinfo_t)

.. type:: type sys_addrinfo_ptr_t = c_ptr(sys_addrinfo_t)

.. method:: proc sys_addrinfo_ptr_t.flags: c_int

.. method:: proc sys_addrinfo_ptr_t.family: c_int

.. method:: proc sys_addrinfo_ptr_t.socktype: c_int

.. method:: proc sys_addrinfo_ptr_t.addr: sys_sockaddr_t

.. method:: proc sys_addrinfo_ptr_t.next: sys_addrinfo_ptr_t

.. function:: proc sys_init_sys_sockaddr_t(ref addr: sys_sockaddr_t)

.. function:: proc sys_getsockaddr_family(const ref addr: sys_sockaddr_t): c_int

.. function:: proc sys_set_sys_sockaddr_t(ref addr: sys_sockaddr_t, host: c_string, port: c_uint, family: c_int): c_int

.. function:: proc sys_set_sys_sockaddr_in_t(ref addr: sys_sockaddr_t, host: sys_in_addr_t, port: c_uint)

.. function:: proc sys_set_sys_sockaddr_in6_t(ref addr: sys_sockaddr_t, host: sys_in6_addr_t, port: c_uint)

.. function:: proc sys_host_sys_sockaddr_t(const ref addr: sys_sockaddr_t, host: c_ptr(c_char), hostlen: socklen_t, ref length: c_int): c_int

.. function:: proc sys_port_sys_sockaddr_t(const ref addr: sys_sockaddr_t, ref port: c_uint): c_int

.. function:: proc sys_strerror(error: qio_err_t, ref string_out: c_string): qio_err_t

.. function:: proc sys_readlink(path: c_string, ref string_out: c_string): qio_err_t

.. function:: proc sys_getenv(name: c_string, ref string_out: c_string): c_int

   Check whether or not the environment variable ``name`` is defined.
   If ``name`` is defined then return 1 and update ``string_out``
   to store the value of the environment variable
   otherwise the function returns 0.
   
   :arg name: name of the environment variable
   :type name: `c_string`
   
   :arg string_out: store the value of ``name`` environment variable if defined
   :type string_out: `c_string`
   
   :returns: 1 if ``name`` is defined and 0 if not
   :rtype: `c_int`
   

   .. warning::

      'Sys.sys_getenv' is deprecated; please use 'OS.sys_getenv' instead

.. type:: type mode_t = uint(32)

.. function:: proc sys_open(pathname: c_string, flags: c_int, mode: mode_t, ref fd_out: fd_t): qio_err_t

.. function:: proc sys_close(fd: fd_t): qio_err_t

.. type:: type off_t = int(64)

.. function:: proc sys_mmap(addr: c_void_ptr, length: c_size_t, prot: c_int, flags: c_int, fd: fd_t, offset: off_t, ref ret_out: c_void_ptr): qio_err_t

.. function:: proc sys_munmap(addr: c_void_ptr, length: c_size_t): qio_err_t

.. function:: proc sys_fcntl_ptr(fd: fd_t, cmd: c_int, arg: c_void_ptr, ref ret_out: c_int): qio_err_t

.. function:: proc sys_dup(oldfd: fd_t, ref fd_out: fd_t): qio_err_t

.. function:: proc sys_dup2(oldfd: fd_t, newfd: fd_t, ref fd_out: fd_t): qio_err_t

.. function:: proc sys_pipe(ref read_fd_out: fd_t, ref write_fd_out: fd_t): qio_err_t

.. function:: proc sys_getaddrinfo_protocol(res: sys_addrinfo_ptr_t): c_int

.. function:: proc sys_getnameinfo(ref addr: sys_sockaddr_t, ref host_out: c_string, ref serv_outc_: c_string, flags: c_int): qio_err_t

.. function:: proc sys_socketpair(_domain: c_int, _type: c_int, protocol: c_int, ref sockfd_out_a: fd_t, ref sockfd_out_b: fd_t): qio_err_t

.. function:: proc sys_shutdown(sockfd: fd_t, how: c_int): qio_err_t

.. function:: proc sys_fcntl(fd: fd_t, cmd: c_int, ref ret_out: c_int): qio_err_t

.. function:: proc sys_fcntl_long(fd: fd_t, cmd: c_int, arg: c_long, ref ret_out: c_int): qio_err_t

.. function:: proc sys_accept(sockfd: fd_t, ref add_out: sys_sockaddr_t, ref fd_out: fd_t): qio_err_t

.. function:: proc sys_bind(sockfd: fd_t, const ref addr: sys_sockaddr_t): qio_err_t

.. function:: proc sys_connect(sockfd: fd_t, const ref addr: sys_sockaddr_t): qio_err_t

.. function:: proc getaddrinfo(node: c_string, service: c_string, ref hints: sys_addrinfo_t, ref res_out: sys_addrinfo_ptr_t): qio_err_t

.. function:: proc sys_freeaddrinfo(res: sys_addrinfo_ptr_t)

.. function:: proc sys_getpeername(sockfd: fd_t, ref addr: sys_sockaddr_t): qio_err_t

.. function:: proc sys_getsockname(sockfd: fd_t, ref addr: sys_sockaddr_t): qio_err_t

.. function:: proc sys_getsockopt(sockfd: fd_t, level: c_int, optname: c_int, optval: c_void_ptr, ref optlen: socklen_t): qio_err_t

.. function:: proc sys_setsockopt(sockfd: fd_t, level: c_int, optname: c_int, optval: c_void_ptr, optlen: socklen_t): qio_err_t

.. function:: proc sys_listen(sockfd: fd_t, backlog: c_int): qio_err_t

.. function:: proc sys_socket(_domain: c_int, _type: c_int, protocol: c_int, ref sockfd_out: fd_t): qio_err_t

.. function:: proc sys_getaddrinfo_addr(res: sys_addrinfo_ptr_t): sys_sockaddr_t

.. function:: proc sys_getaddrinfo_next(res: sys_addrinfo_ptr_t): sys_addrinfo_ptr_t

.. function:: proc sys_getaddrinfo_flags(res: sys_addrinfo_ptr_t): c_int

.. function:: proc sys_getaddrinfo_family(res: sys_addrinfo_ptr_t): c_int

.. function:: proc sys_getaddrinfo_socktype(res: sys_addrinfo_ptr_t): c_int

.. type:: type time_t = c_long

.. type:: type suseconds_t = c_long

.. record:: timeval

   .. attribute:: var tv_sec: time_t

   .. attribute:: var tv_usec: suseconds_t

.. function:: proc sys_select(nfds: c_int, readfds: c_ptr(fd_set), writefds: c_ptr(fd_set), exceptfds: c_ptr(fd_set), timeout: c_ptr(timeval), ref nset: c_int): qio_err_t

